Ajustements des variables du monstre, ajout de la source du monstre

--- a/devoirSemaine11/Devoir_S11_AnimationObjets_debut.html
+++ b/devoirSemaine11/Devoir_S11_AnimationObjets_debut.html
@@ -47,20 +47,20 @@
 
         //Déclaration de la variale monstre de type objet, ayant les propriétés minimal pour l'affichage d'une image fixe qui se déplace
         let monstre = {
-            //image 
-            //Position de départ sur l'axe des x: 0
-            //Position sur l'axe des y: 0
-            //Vitesse horizontale du monstre: 5
-            //Vitesse verticale du monstre: 5
+            image = new Image()
+            Position de départ sur l'axe des x: 0,
+            Position sur l'axe des y: 0,
+            Vitesse horizontale du monstre: 5,
+            Vitesse verticale du monstre: 5,
             largeur: 110, //Largeur du monstre       
             hauteur: 110 //Hauteur du monstre
         }
 
         //Charger la source de l'image du monstre
-
+        monstre.img.src = "images/monstre.png"
 
         //Déclaration de la variale diamant de type objet, ayant les propriétés pour l'affichage d'une image fixe
-        let diamant
+        let diamant;
 
 
         //Charger l'image du diamant 1
