--- a/devoirSemaine11/Devoir_S11_AnimationObjets_debut.html
+++ b/devoirSemaine11/Devoir_S11_AnimationObjets_debut.html
@@ -47,7 +47,7 @@
 
         //Déclaration de la variale monstre de type objet, ayant les propriétés minimal pour l'affichage d'une image fixe qui se déplace
         let monstre = {
-            image = new Image(),
+            img: new Image(),
             //Position de départ sur l'axe des x: 0,
             posX:0,
             //Position sur l'axe des y: 0,
@@ -65,11 +65,15 @@
 
         //Déclaration de la variale diamant de type objet, ayant les propriétés pour l'affichage d'une image fixe
         let diamant = {
-            image = new Image(),
-            Position de départ sur l'axe des x: 0,
-            Position sur l'axe des y: 0,
-            Vitesse horizontale du monstre: 5,
-            Vitesse verticale du monstre: 5,
+            img: new Image(),
+            //Position de départ sur l'axe des x: 0,
+            posX: Math.random() * leCanvas.width,
+            //Position sur l'axe des y: 0,
+            posY: leCanvas.height,
+            //Vitesse horizontale du monstre: 5
+            vitesseX: 5,
+            //Vitesse verticale du monstre: 5,
+            vitesseY: 5,
             largeur: 110, //Largeur du monstre       
             hauteur: 110 //Hauteur du monstre
         }
@@ -100,11 +104,11 @@
         function presserTouche(event) {
             console.log("presserTouche", event.keyCode);
             //Enregistrer si une touche gauche/droite est pressée
-            if (event.keyCode == 39 || event.keyCode == 65) { //flèche droite
+            if (event.keyCode == 39 || event.keyCode == 68) { //flèche droite
                 flecheDroite = true;
                 flecheGauche = false;
             }
-            if (event.keyCode == 37 || event.keyCode == 68) { //flèche gauche
+            if (event.keyCode == 37 || event.keyCode == 65) { //flèche gauche
                 flecheGauche = true;
                 flecheDroite = false;
             }
@@ -115,12 +119,12 @@
             //console.log("relacherTouche", event.keyCode);
 
             //Enregistrer si une touche gauche/droite est relâchée
-            if (event.keyCode == 39 || event.keyCode == 65) { //flèche droite
+            if (event.keyCode == 39 || event.keyCode == 68) { //flèche droite
                 flecheDroite = false;
                 //********modifier la source du personnage pour arret droite
                 perso.img.src = "images/arretDroite.png";
             }
-            if (event.keyCode == 37 || event.keyCode == 68) { //flèche gauche
+            if (event.keyCode == 37 || event.keyCode == 65) { //flèche gauche
                 flecheGauche = false;
                 //******modifier la source du personnage pour arret gauche
                 perso.img.src = "images/arretGauche.png";
@@ -218,9 +222,8 @@
             }
 
             //Dessiner le personnage avec le drawImage pour l'animation du personnage
+            ctx.drawImage(perso.img, perso.sourceX, 0, perso.largeur, perso.hauteur, perso.posX, perso.posY, perso.largeur, perso.hauteur);
 
-            //T'es rendu ici!
-            ctx.drawImage(perso.img, perso.posX, pers)
 
         }
 
@@ -231,7 +234,8 @@
             perso.sourceX = perso.indexVignette * perso.largeur;
 
             //Incrémenter et gérer l'index de la future vignette à afficher
-            perso.indexVignette += 1;
+            //perso.indexVignette += 1;
+            perso.indexVignette++;
 
             if (perso.indexVignette == perso.nbVignette) {
                 perso.indexVignette = 0;
@@ -252,7 +256,7 @@
             let posXmax = leCanvas.width - monstre.largeur;
 
             if (monstre.posX < 0 || monstre.posX > posXmax) {
-                monstre.vitesseX *= -1; //ou monstre.vitesse = -monstre.vitesse
+                monstre.vitesseX *= -1;
             }
 
             //Si le monstre touche le haut ou le bas du canvas
@@ -260,7 +264,7 @@
             let posYmax = leCanvas.height - monstre.hauteur;
 
             if (monstre.posY < 0 || monstre.posY > posYmax) {
-                monstre.vitesseY *= -1; //ou monstre.vitesse = -monstre.vitesse
+                monstre.vitesseY *= -1;
             }
 
             //Dessiner le monstre
@@ -276,6 +280,7 @@
             ctx.textAlign = "center";
 
             //Desssiner le score
+            
 
         }
 
